--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <style>
-<img src='alien.png' class="image-cropper" />
+<img src='IMG_20201205_202914.jpg' class="image-cropper" />
 .image-cropper {
     width: 100px;
     height: 100px;
