--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <body>
 <style>
 <img src='IMG_20201205_202914.jpg' class="image-cropper" />
+<style>
 .image-cropper {
     width: 100px;
     height: 100px;
