--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <img src='IMG_20201205_202914.jpg' class="image-cropper" />
 <style>
 .image-cropper {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     position: relative;
     overflow: hidden;
     border-radius: 50%;
+    border: 5px solid green;
 }
 .profile-pic {
   display: inline;
