--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 Your browser does not support the audio element.
 </audio>
 <script>
-    document.querySelector('.image-cropper').addEventListener('onClick', function() {
+    document.querySelector('.image-cropper').addEventListener('click', function() {
       console.log('playing audio');
       document.querySelector('#player').play()  
     });
