--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@ Your browser does not support the audio element.
 <img id='honk' src='honk.jpg' class="image-cropper" />
 
 <script>
-    document.querySelector('.image-cropper').addEventListener('click', function(evt) {
-      const img = evt.target;
-      const playerSource = document.querySelector('#player source');
-      playerSource.src = img.id + '.wav'; 
-      console.log('playing audio ', playerSource.src);
-      document.querySelector('#player').play()  
-    });
+    const imgs = document.querySelectorAll('.image-cropper')
+    for(const img of imgs) {
+      img.addEventListener('click', function(evt) {
+        const img = evt.target;
+        const playerSource = document.querySelector('#player source');
+        playerSource.src = img.id + '.wav'; 
+        console.log('playing audio ', playerSource.src);
+        document.querySelector('#player').play()  
+      });
+    }
 </script>
 <style>
 .image-cropper {
